# smc-simulation

./: README.md  package.xml  setup.cfg  setup.py
config/: smc_demo.rviz
launch/: smc_demo.launch.py
scripts/: verify_smc_demo.sh
smc_demo/: marker_factory.py  smc_controller_node.py  smc_math.py  说明.md
